# darwin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_archive.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-filter-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-dev.yml  docker-releases.yml  docker.yml
cmake/: FindArmadillo.cmake  FindFaup.cmake  FindHiredis.cmake  FindMLPACK.cmake  FindMlpack.cmake  FindTensorflow.cmake  FindYara.cmake  catch_tests.cmake  fanomaly.cmake  fbuffer.cmake  fconnection.cmake  fdga.cmake  fhostlookup.cmake  finspection.cmake  flogs.cmake  fnsigma.cmake  fpcr.cmake  fpython.cmake  fsession.cmake  fsofa.cmake  ftanomaly.cmake  ftest.cmake  fyara.cmake
conf/: darwin.conf.example
conf/fbuffer/: fbuffer.conf.example
conf/fcontent_inspection/: fcontent_inspection.conf.example
conf/fdga/: fdga.conf.example
conf/fend/: fend.conf.example
conf/fhostlookup/: database  fhostlookup.conf.example
conf/fuser_agent/: fuser_agent.conf.example
conf/fyara/: fyara.conf
docker/: darwin
docker/faup/: Dockerfile
manager/: Administration.py  HeartBeat.py  JsonSocket.py  Services.py  config.py  manager.py  requirements.txt  settings.py
pkg/stage/: +MANIFEST  +POST_DEINSTALL  +POST_INSTALL  +PRE_INSTALL  plist
samples/: config.cpp  config.hpp  protocol.h
samples/base/: AGenerator.cpp  AGenerator.hpp  AServer.hpp  ASession.cpp  ASession.fwd.hpp  ASession.hpp  ATask.cpp  ATask.hpp  AlertManager.cpp  AlertManager.hpp  Core.cpp  Core.hpp  DarwinPacket.cpp  DarwinPacket.hpp  Logger.cpp  Logger.hpp  Manager.cpp  Manager.hpp  Monitor.cpp  Monitor.hpp  NextFilterConnector.cpp  NextFilterConnector.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  Stats.cpp  Stats.hpp  TcpServer.cpp  TcpServer.hpp  TcpSession.cpp  TcpSession.hpp  ThreadGroup.cpp  ThreadGroup.hpp  UnixNextFilterConnector.cpp  UnixNextFilterConnector.hpp  UnixServer.cpp  UnixServer.hpp  UnixSession.cpp  UnixSession.hpp  (+2 more)
samples/fanomaly/: AnomalyTask.cpp  AnomalyTask.hpp  CMakeLists.txt  Generator.cpp  Generator.hpp
samples/fbuffer/: BufferTask.cpp  BufferTask.hpp  BufferThread.cpp  BufferThread.hpp  BufferThreadManager.cpp  BufferThreadManager.hpp  Generator.cpp  Generator.hpp  OutputConfig.cpp  OutputConfig.hpp  commitFile  enums.hpp
samples/fconnection/: CMakeLists.txt  ConnectionSupervisionTask.cpp  ConnectionSupervisionTask.hpp  Generator.cpp  Generator.hpp
samples/fdecision/: DecisionTask.cpp  DecisionTask.hpp  Generator.cpp  Generator.hpp
samples/fdga/: CMakeLists.txt  DGATask.cpp  DGATask.hpp  Generator.cpp  Generator.hpp  TfLiteHelper.cpp  TfLiteHelper.hpp
samples/fend/: CMakeLists.txt  EndTask.cpp  EndTask.hpp  Generator.cpp  Generator.hpp
samples/fhostlookup/: CMakeLists.txt  Generator.cpp  Generator.hpp  HostLookupTask.cpp  HostLookupTask.hpp
samples/finjection/: Generator.cpp  Generator.hpp  InjectionTask.cpp  InjectionTask.hpp
samples/finspection/: CMakeLists.txt  ContentInspectionTask.cpp  ContentInspectionTask.hpp  Generator.cpp  Generator.hpp  data_pool.cpp  data_pool.hpp  extract_impcap.cpp  extract_impcap.hpp  file_utils.cpp  file_utils.hpp  flow.cpp  flow.hpp  hash_utils.cpp  hash_utils.hpp  packet-utils.hpp  packets.cpp  packets.hpp  rand_utils.cpp  rand_utils.hpp  stream_buffer.cpp  stream_buffer.hpp  tcp_sessions.cpp  tcp_sessions.hpp  yara_utils.cpp  yara_utils.hpp
samples/flogs/: CMakeLists.txt  Generator.cpp  Generator.hpp  LogsTask.cpp  LogsTask.hpp
samples/fnsigma/: Generator.cpp  Generator.hpp  NSigmaTask.cpp  NSigmaTask.hpp
samples/fpcr/: Generator.cpp  Generator.hpp  PCRTask.cpp  PCRTask.hpp
samples/fpython/: Generator.cpp  Generator.hpp  PythonObject.hpp  PythonTask.cpp  PythonTask.hpp  PythonThread.hpp  algorithm_module.py  example.py  fpython.hpp
samples/fpythonexample/: Generator.cpp  Generator.hpp  PythonExampleTask.cpp  PythonExampleTask.hpp
samples/freputation/: CMakeLists.txt  Generator.cpp  Generator.hpp  ReputationTask.cpp  ReputationTask.hpp
samples/froguedevice/: Generator.cpp  Generator.hpp  README.md  RogueDeviceTask.cpp  RogueDeviceTask.hpp
samples/fsession/: CMakeLists.txt  Generator.cpp  Generator.hpp  SessionTask.cpp  SessionTask.hpp
samples/fsofa/: Generator.cpp  Generator.hpp  SofaTask.cpp  SofaTask.hpp
samples/ftanomaly/: CMakeLists.txt  Generator.cpp  Generator.hpp  TAnomalyTask.cpp  TAnomalyTask.hpp  TAnomalyThreadManager.cpp  TAnomalyThreadManager.hpp
samples/ftenrich/: Generator.cpp  Generator.hpp  TEnrichTask.cpp  TEnrichTask.hpp  TEnrichThreadManager.cpp  TEnrichThreadManager.hpp
samples/ftest/: Generator.cpp  Generator.hpp  TestTask.cpp  TestTask.hpp
samples/fuseragent/: CMakeLists.txt  Generator.cpp  Generator.hpp  UserAgentTask.cpp  UserAgentTask.hpp
samples/fyara/: Generator.cpp  Generator.hpp  YaraTask.cpp  YaraTask.hpp
samples/fyarascan/: Generator.cpp  Generator.hpp  YaraScanTask.cpp  YaraScanTask.hpp
tests/: conf.py  requirements.txt  test.py
tests/core/: alert.py  alert_tests.txt  base.py  gen_alert_tests.py  redis.py  test.py  utils.py
tests/filters/: fanomaly.py  fbuffer.py  fconnection.py  fdga.py  fhostlookup.py  flogs.py  fnsigma.py  fpcr.py  fpython.py  fsession.py  fsofa.py  ftanomaly.py  fvaml.py  fvast.py  fyara.py  fyarascan.py  test.py
tests/manager_socket/: logging_test.py  monitor_test.py  multi_filters_test.py  reporting_test.py  test.py  update_test.py  utils.py
tests/tools/: darwin_utils.py  filter.py  logger.py  output.py  redis_utils.py  sofa_mock.py  utils.py
tests/units/: testsBase.cpp  (+3 more)
toolkit/: AThread.cpp  AThread.hpp  AThreadManager.cpp  AThreadManager.hpp  Base64.h  Encoders.h  FileManager.cpp  FileManager.hpp  Files.cpp  Files.hpp  Network.cpp  Network.hpp  PythonUtils.cpp  PythonUtils.hpp  RedisManager.cpp  RedisManager.hpp  StringUtils.cpp  StringUtils.hpp  ThreadManager.cpp  ThreadManager.hpp  Time.cpp  Time.hpp  Uuid.cpp  Uuid.hpp  Validators.cpp  Validators.hpp  Yara.cpp  Yara.hpp  lru_cache.hpp  xxhash.h  xxhash.hpp
(+73 files in other folders)
